--- a/src/zapisy/spravni_rada/2014-07-29.md
+++ b/src/zapisy/spravni_rada/2014-07-29.md
@@ -1,3 +1,8 @@
+---
+title: "Schůze správní rady (1)"
+date: 2014-07-29
+layout: zapis.html
+---
 Schůze správní rady (1), 29. 7. 2014
 =========================
 Přítomni: Žáno, Pánča, Eda  
