Meeting reports updated.

--- a/src/zapisy/schuze/2014-01-03.md
+++ b/src/zapisy/schuze/2014-01-03.md
@@ -1,16 +1,77 @@
----
-title: "První schůze – předzakládající"
-date: 2014-01-03
-layout: zapis.html
----
+První schůze, 3. 1. 2014
+========================
+předzakládající 
+---------------
 
-účast: Eda, Žáno, Pánča, Jája
+účast: Eda, Žáno, Pánča, Jája  
 
 začátek: 22:38, Paliárka
 
-Program:
+Program:  
 Příprava podkladů pro sepsání stanov spolku
 
-# Název spolku
+1. **Název spolku**  
+    Návrhy:  
+     - Okrašlovací spolek v Bubnech
+     - Okrašlovací spolek v Holešovicích – Bubnech
+     - Okrašlovací spolek bubenský
+     - Okrašlovací spolek Buben
 
-...
+    Bude dáno k hlasování přes doodle
+
+2. **Organizační struktura**  
+    - předseda – místopředseda (jmenován předsedou v době jeho nepřítomnosti)
+    - správní rada – volen lichý počet (3-7 osob), možnost virilního člena
+    - smírčí a revizní komise
+    - pokladník
+    - shromáždění členů
+
+Přerušeno – 22:46 – 22:50
+
+3. **Účetnictví**  
+    Jája zjistí, zda a za jakých podmínek bude muset spolek vést
+    účetnictví a v jaké podobě [úkol: Jája]
+
+4. **Účel spolku**  
+    - Všeobecné zušlechťování veřejného prostoru na území hl. m. Prahy
+    - Pořádání kulturních a společenských akcí na území hl. m. Prahy
+    - Politická činnost za účelem naplnění účelů spolku
+
+Přerušeno 23:21-23:24  
+23:25 – přesun do Spitfiru, účast + Vlčák, Cerča
+
+5. **Struktura členství**  
+    - zakládající člen – ten, kdo se bude účastnit zakládající schůze,
+      musí prokázat oddanost myšlence spolku
+    - kmenový člen – běžné členství spolku vznikající na základě přijetí
+      za člena
+    - přispívající člen – kdokoli spolku přispěje jakoukoli částkou, bez
+      hlasovacíh práv, ale s právem na informace
+    - virilista – zakládající nebo kmenový člen, jehož finanční
+      příspěvek za kalendářní rok se rovná součtu všech ostatních
+      příspěvků, stává se na další kalendářní rok členem správní rady
+
+Přerušeno 00:03 – 00:06
+
+6. **Sídlo**  
+    Vhodná by byla schnirchovka – [úkol: Jája prověří možnosti H]
+
+7. **Insignie spolku**  
+    vlajka, hymna, znak, odznak, šerpa, pečeť, strom
+
+8. **Spolkové barvy**  
+    zelená, modrá, černá, rudá
+
+9. **Nákres znaku spolku**  
+    Heraldický popis bude doplněn [úkol]
+
+10. **Stanovy**  
+    Žáno připraví znění stanov a odešle potenciálním členům [úkol:
+    Žáno H]
+
+11. **Zakládající schůze**  
+    Bude se konat v pátek 24. 1. 2014 – místo bude upřesněno
+
+Zapsal Žáno (8.1.)
+
+ vim: textwidth=72 : autoindent : expandtab
