--- a/src/zapisy/schuze/2015-10-23.md
+++ b/src/zapisy/schuze/2015-10-23.md
@@ -1,273 +1,275 @@
----
-title: "Pátá schůze"
-date: 2015-10-23
-layout: zapis.html
----
-_volební_
-
+Pátá schůze, 23. 10. 2015
+=========================
+volební
+-------
 Přítomni: Žáno, Houba, Pánča, Jája, Mokl, Vlčák, Eda, (Zuzi skrz plnou
-moc)
-Žadatel o členství, zpočátku jako host: Rupek
+moc)  
+Žadatel o členství, zpočátku jako host: Rupek  
 Zapisovatel: Eda
 
 Zahájení: 21:20, Na Paliárce
 
-1. **Formální úkony, procesní záležitosti**
-   - Žáno je zplnomocněn zastupovat Zuzi
-   - Eda podává návrh, abychom se přesunuli Na Šachtu, argumentuje
-     zejména hlukem z koncertu kapely Pohodáři, který Na Paliárce právě
-     započal.
-     *USNESENÍ č. 1:* Schůze se ihned přesune Na Novou Šachtu.
-     Přijato. (3 pro, 2 proti, 3 se zdrželi)
-     Předseda spolku následně hlasování zrušil, neboť hlasoval proti
-     svému přesvědčení jsa dezorientován. Vyvoláno opravné hlasování
-     o usnesení.
-     *Zamítnuto.* (2 pro, 4 proti, 2 se zdrželi)
-   - Z plné moci bylo zjištěno, že Zuzi nebydlí s Žánem.
+1. **Formální úkony, procesní záležitosti**  
+    - Žáno je zplnomocněn zastupovat Zuzi
+    - Eda podává návrh, abychom se přesunuli Na Šachtu, argumentuje
+      zejména hlukem z koncertu kapely Pohodáři, který Na Paliárce právě
+      započal.  
+      *USNESENÍ č. 1:* Schůze se ihned přesune Na Novou Šachtu.  
+      Přijato. (3 pro, 2 proti, 3 se zdrželi)  
+      Předseda spolku následně hlasování zrušil, neboť hlasoval proti
+      svému přesvědčení jsa dezorientován. Vyvoláno opravné hlasování
+      o usnesení.  
+      *Zamítnuto.* (2 pro, 4 proti, 2 se zdrželi)
+    - Z plné moci bylo zjištěno, že Zuzi nebydlí s Žánem.
 
-2. **Parní čistič**
-   - Houba přednáší referát o parním čističi ulic za pracovní skupinu
-     pro parní čistič
-       - Členové pracovní skupiny (Zuzi a Houba) zmapovali situaci
-         v oblasti parních čističů (dále p.č.), zejména ohledně ceny.
-         Pracovní skupina musí konstatovat, že cena je stejná jako
-         posledně (4500 dolarů). Proto se zaměřili na jiný aspekt
-         problematiky.
-       - Houba rozdává [uměleckou vizualizaci
-         p.č.](../appendices/zapis_05_vizual.jpg), která je nedílnou
-         součástí tohoto zápisu. Předkladatel na vizualizaci vyzdvihuje
-         fakt, že samotný čistič na celém stroji zaujímá dominantní
-         pozici; vpředu je potom prosklená kabina pro pilota p.č.
-       - Houba žádá členy spolku, aby si vizualizaci vzali domů a spolu
-         s pracovní skupinou pro p.č. tuto studii dále rozpracovali
-         a podíleli se na dalším směřování. Posléze pro některé
-         spolkaře upřesnil, že rozpracováváním studie se myslí zejména
-         její vybarvování.
-   - Mokl vznáší námitku, zda když jde o p.č. chodníků, neměla by
-     samotná čisticí jednotka být spíše při zemi. Námitka vyvolala
-     překvapení a šum kolem stolu a byla prozatím odložena.
-   - Žáno se táže na harmonogram pracovní skupiny pro p.č., Houba
-     odpovídá, že se bude pokračovat v započaté práci.
+2. **Parní čistič**  
+    - Houba přednáší referát o parním čističi ulic za pracovní skupinu
+      pro parní čistič
+        - Členové pracovní skupiny (Zuzi a Houba) zmapovali situaci
+          v oblasti parních čističů (dále p.č.), zejména ohledně ceny.
+          Pracovní skupina musí konstatovat, že cena je stejná jako
+          posledně (4500 dolarů). Proto se zaměřili na jiný aspekt
+          problematiky.
+        - Houba rozdává [uměleckou vizualizaci
+          p.č.](../appendices/zapis_05_vizual.jpg), která je nedílnou
+          součástí tohoto zápisu. Předkladatel na vizualizaci vyzdvihuje
+          fakt, že samotný čistič na celém stroji zaujímá dominantní
+          pozici; vpředu je potom prosklená kabina pro pilota p.č.
+        - Houba žádá členy spolku, aby si vizualizaci vzali domů a spolu
+          s pracovní skupinou pro p.č. tuto studii dále rozpracovali
+          a podíleli se na dalším směřování. Posléze pro některé
+          spolkaře upřesnil, že rozpracováváním studie se myslí zejména
+          její vybarvování.
+    - Mokl vznáší námitku, zda když jde o p.č. chodníků, neměla by
+      samotná čisticí jednotka být spíše při zemi. Námitka vyvolala
+      překvapení a šum kolem stolu a byla prozatím odložena.
+    - Žáno se táže na harmonogram pracovní skupiny pro p.č., Houba
+      odpovídá, že se bude pokračovat v započaté práci.
 
-3. **Přijetí nováčka**
-   - na schůzi dorazil kandidát na prvního kmenového člena spolku
-   - žadatel o vstup do spolku dostává prostor, aby se představil
-     a sdělil, proč usiluje o členství: "Jmenuju se Rupek a nelíbí se
-     mi hovna."
-   - Ze strany zákládajících členů padl zásadní dotaz, co si myslí
-     o moči. Žadatel sklidil potlesk s odpovědí "Ta je často ještě
-     horší!"
-   - *USNESENÍ č.2:* Přijímáme Rupka do spolku jakožto kmenového člena.
-     *Přijato.* (8 pro)
+3. **Přijetí nováčka**  
+    - na schůzi dorazil kandidát na prvního kmenového člena spolku
+    - žadatel o vstup do spolku dostává prostor, aby se představil
+      a sdělil, proč usiluje o členství: "Jmenuju se Rupek a nelíbí se
+      mi hovna."
+    - Ze strany zákládajících členů padl zásadní dotaz, co si myslí
+      o moči. Žadatel sklidil potlesk s odpovědí "Ta je často ještě
+      horší!"
+    - *USNESENÍ č.2:* Přijímáme Rupka do spolku jakožto kmenového člena.  
+      *Přijato.* (8 pro)
 
-4. **Web**
-   - Houba přednáší referát pracovní skupiny WEB o webu za oba členy
-     pracovní skupiny (Houba, Pánča)
-       - "Jde to pomalu, co vám budu povídat."
-       - máme úspěšně zaregistrovanou doménu
-         [hobutrol.cz](http://hobutrol.cz), web je zatím prázdný
-   - *USNESENÍ č. 3:* Členská schůze pověřuje pracovní skupinu WEB
-     umístit do dvou měsíců něco na web. Minimální rozsah tvoří název
-     spolku, stanovy a zápisy.
-     *Přijato.* (8 pro, 1 proti)
-     (Proti usnesení byl bez vysvětlení nově přijatý kmenový člen,
-     kverulant.)
-     [úkol: Houba H]
+4. **Web**  
+    - Houba přednáší referát pracovní skupiny WEB o webu za oba členy
+      pracovní skupiny (Houba, Pánča)
+        - "Jde to pomalu, co vám budu povídat."
+        - máme úspěšně zaregistrovanou doménu
+          [hobutrol.cz](http://hobutrol.cz), web je zatím prázdný
+    - *USNESENÍ č. 3:* Členská schůze pověřuje pracovní skupinu WEB
+      umístit do dvou měsíců něco na web. Minimální rozsah tvoří název
+      spolku, stanovy a zápisy.  
+      *Přijato.* (8 pro, 1 proti)  
+      (Proti usnesení byl bez vysvětlení nově přijatý kmenový člen,
+      kverulant.)  
+      [úkol: Houba H]
 
-5. **Vlčákův návrh: fotosoutěž**
-   - Vlčák navrhuje pověřit každého člena vyfocením alespoň jedné fotky
-     psa na Praze 7 v choulostivé situaci
-   - Žáno návrh doplňuje: správní rada vybere nezávislou tříčlennou
-     komisi, která vybere nejlepší fotografii a odmění autora diplomem
-   - fotky se budou zasílat e-mailem na adresu Vlčáka (radimp, všichni
-     členové mají adresu v e-mailu svolávajícím dnešní schůzi)
-   - uzávěrka: konec ledna 2016
-   - v prvé řadě jde o úkol pro členy, soutěž je druhotná
-   - *USNESENÍ č. 4:* Každý člen zašle do konce ledna 2016 Vlčákovi
-     fotografii psa v choulostivé situaci.
-     *Přijato* aklamací.
-     [úkol: každý člen, 31. 1. 2016]
+5. **Vlčákův návrh: fotosoutěž**  
+    - Vlčák navrhuje pověřit každého člena vyfocením alespoň jedné fotky
+      psa na Praze 7 v choulostivé situaci
+    - Žáno návrh doplňuje: správní rada vybere nezávislou tříčlennou
+      komisi, která vybere nejlepší fotografii a odmění autora diplomem
+    - fotky se budou zasílat e-mailem na adresu Vlčáka (všichni členové
+      mají adresu v e-mailu svolávajícím dnešní schůzi)
+    - uzávěrka: konec ledna 2016
+    - v prvé řadě jde o úkol pro členy, soutěž je druhotná
+    - *USNESENÍ č. 4:* Každý člen zašle do konce ledna 2016 Vlčákovi
+      fotografii psa v choulostivé situaci.  
+      *Přijato* aklamací.  
+      [úkol: každý člen, 31. 1. 2016]
 
-6. **Znak spolku**
-   - Jája se zavázal do Vánoc vytvořit znak [úkol: Jája, 24. 12.]
-     a poté se propojí s pracovní skupinou WEB
+6. **Znak spolku**  
+    - Jája se zavázal do Vánoc vytvořit znak [úkol: Jája, 24. 12.]
+      a poté se propojí s pracovní skupinou WEB
 
-7. **Fundraising**
-   - byla založena pracovní skupina pro promýšlení grantových možností,
-     která bude zkoumat možnosti získávání finančních prostředků
-     z veřejných prostředků pomocí grantů
-   - členové: Zuzi, Žáno, Houba
+7. **Fundraising**  
+    - byla založena pracovní skupina pro promýšlení grantových možností,
+      která bude zkoumat možnosti získávání finančních prostředků
+      z veřejných prostředků pomocí grantů
+    - členové: Zuzi, Žáno, Houba
 
-8. **Rotování funkcí**
-   - Houba se Zuzi přicházejí s myšlenkou, že posty v našem spolku by
-     -- údajně po vzoru rotariánů -- měly (víceméně povinně) rotovat,
-     abychom "nezahnívali ve svých pozicích"
-   - proběhla rozsáhlá a bohatá diskuse s mnohými pro i proti; týkala
-     se například:
-       - možnosti nekandidovat či odmítnout zvolení,
-       - otázky, zda by vynucená změna na postu předsedy vedla
-         k přínosné změně ve vedení, nebo spíše ke zhoršení po
-         vyloučení nejlepšího kandidáta,
-       - otázky, zda jde o puč uvnitř spolku,
-       - výčtu funkcí, které by rotovaly či
-       - Jájova návrhu, abychom hlavně nic neměnili předčasně, než se
-         vše zaběhne
-   - zaznělo upozornění, že takové pravidlo by vyžadovalo změnu Stanov
-     (= zabránit nové kandidatuře předsedy spolku), případně by šlo
-     o pouhý apel
-   - myšlenka byla členy přijata vesměs kladně
+8. **Rotování funkcí**  
+    - Houba se Zuzi přicházejí s myšlenkou, že posty v našem spolku by
+      -- údajně po vzoru rotariánů -- měly (víceméně povinně) rotovat,
+      abychom "nezahnívali ve svých pozicích"
+    - proběhla rozsáhlá a bohatá diskuse s mnohými pro i proti; týkala
+      se například:
+        - možnosti nekandidovat či odmítnout zvolení,
+        - otázky, zda by vynucená změna na postu předsedy vedla
+          k přínosné změně ve vedení, nebo spíše ke zhoršení po
+          vyloučení nejlepšího kandidáta,
+        - otázky, zda jde o puč uvnitř spolku,
+        - výčtu funkcí, které by rotovaly či
+        - Jájova návrhu, abychom hlavně nic neměnili předčasně, než se
+          vše zaběhne
+    - zaznělo upozornění, že takové pravidlo by vyžadovalo změnu Stanov
+      (= zabránit nové kandidatuře předsedy spolku), případně by šlo
+      o pouhý apel
+    - myšlenka byla členy přijata vesměs kladně
 
-9. **Úklid zajišťovaný radnicí**
-   - Mokl upozornil, že radnice Prahy 7 se velmi zlepšila, o úklid
-     v ulicích se hodně zajímá, zřídila mj. také mapu míst na Praze 7,
-     kde jsou s úklidem problémy. Domnívá se, že o věc mají opravdovou
-     starost a mohli by převzít naši myšlenku p.č.
-   - Mokl na základě řečeného navrhuje přednést zastupitelům problém
-     balkonů, pod něž neprší a zápach se tudíž nesmývá a neodplavuje
-   - Starosta pořádá pravidelná setkání s občany v hospodách, nejbližší
-     setkání se týká úklidu ulic a proběhne v baru Těsně vedle Burundi
-     ve čtvrtek 29. 10. od 18.00 [úkol: Pánča se tam dostaví a přednese
-     problém]
+9. **Úklid zajišťovaný radnicí**  
+    - Mokl upozornil, že radnice Prahy 7 se velmi zlepšila, o úklid
+      v ulicích se hodně zajímá, zřídila mj. také mapu míst na Praze 7,
+      kde jsou s úklidem problémy. Domnívá se, že o věc mají opravdovou
+      starost a mohli by převzít naši myšlenku p.č.
+    - Mokl na základě řečeného navrhuje přednést zastupitelům problém
+      balkonů, pod něž neprší a zápach se tudíž nesmývá a neodplavuje
+    - Starosta pořádá pravidelná setkání s občany v hospodách, nejbližší
+      setkání se týká úklidu ulic a proběhne v baru Těsně vedle Burundi
+      ve čtvrtek 29. 10. od 18.00 [úkol: Pánča se tam dostaví a přednese
+      problém H]
 
 Přerušení schůze: 22:22 -- 22:34 (důvod: krátký odpočinek, kuloární
 jednání)
 
-10. **Členské poplatky**
-   - předseda důrazně kárá dlužníky, kteří nezaplatili poplatky na roky
-     2014 a 2015 v souhrnné výši 1000 Kč každý; jsou jimi:
-       - Jája,
-       - Mokl,
-       - Houba,
-     tedy komplet celá smírčí a revizní komise spolku.
-   - připomínáme číslo účtu: [2200781787
-     / 2010](https://www.fio.cz/scgi-bin/hermes/dz-transparent.cgi?pohyby_DAT_od=01.01.2015&ID_ucet=2200781787)
-     [úkol: Jája, Mokl, Houba bez otálení]
-   - *USNESENÍ č. 5:* Poplatky pro rok 2016 zachovat ve výši 500 Kč.
-     *Přijato* aklamačně.
-   - Vlčák pro zasazení do kontextu podotýká, že naše členské poplatky
-     jsou vyšší než průměrný odváděný poplatek za psa
-   - vyvstala otázka, zda nově přijímaní členové spolku, kteří si
-     nevychutnají celoroční činnost, mají platit snížený poplatek
-     (poměrnou část, tedy např. 100 Kč na 2 měsíce a 12 dní), nebo dle
-     Houbova návrhu plnou částku (v našem případě 500 Kč na zbylé dva
-     a půl měsíce)
-   - po bouřlivé diskusi (která byla prokládána návrhy na zaplacení
-     penále z prodlení od dlužných členů), rozhodl předseda takto:
-   - Kmenový člen nechť se rozhodne sám, zda půjde cestou Houbovou, či
-     cestou šetřílkovství. Stejně tak dlužníci si sami určí pokutu
-     z prodlení, kterou přispějí spolku.
+10. **Členské poplatky**  
+    - předseda důrazně kárá dlužníky, kteří nezaplatili poplatky na roky
+      2014 a 2015 v souhrnné výši 1000 Kč každý; jsou jimi:
+        - Jája,
+        - Mokl,
+        - Houba,  
+      tedy komplet celá smírčí a revizní komise spolku.
+    - připomínáme číslo účtu: [2200781787
+      / 2010](https://www.fio.cz/scgi-bin/hermes/dz-transparent.cgi?pohyby_DAT_od=01.01.2015&ID_ucet=2200781787)
+      [úkol: Jája, Mokl, Houba bez otálení H]
+    - *USNESENÍ č. 5:* Poplatky pro rok 2016 zachovat ve výši 500 Kč.  
+      *Přijato* aklamačně.
+    - Vlčák pro zasazení do kontextu podotýká, že naše členské poplatky
+      jsou vyšší než průměrný odváděný poplatek za psa
+    - vyvstala otázka, zda nově přijímaní členové spolku, kteří si
+      nevychutnají celoroční činnost, mají platit snížený poplatek
+      (poměrnou část, tedy např. 100 Kč na 2 měsíce a 12 dní), nebo dle
+      Houbova návrhu plnou částku (v našem případě 500 Kč na zbylé dva
+      a půl měsíce)
+    - po bouřlivé diskusi (která byla prokládána návrhy na zaplacení
+      penále z prodlení od dlužných členů), rozhodl předseda takto:
+    - Kmenový člen nechť se rozhodne sám, zda půjde cestou Houbovou, či
+      cestou šetřílkovství. Stejně tak dlužníci si sami určí pokutu
+      z prodlení, kterou přispějí spolku.
 
-11. **Stanovy II**
-   - návrhy na vylepšení stanov a opravy problematických míst budeme
-     průběžně zanášet spolu s komentářem do Stanov verze 2
+11. **Stanovy II**  
+    - návrhy na vylepšení stanov a opravy problematických míst budeme
+      průběžně zanášet spolu s komentářem do Stanov verze 2
 
-12. **Vyfoť hovňáka**
-   - Rupek se diví: "To jsou pořád ceremonie a hlasování -- a skutek
-     utek!"
-   - Pánča ho konejší: "To je běžný dojem všech nováčků..."
-   - kmenový člen Rupek předkládá návrh na facebookovou stránku Vyfoť
-     hovňáka, kam by každý spoluobčan mohl postovat fotku psa
-     znečišťujícího chodník a jeho majitele, který evidentně ignoruje
-     povinnost nápravy; stimulovat vhodně veřejnost, aby měla zájem
-     dokumentovat psí výkaly od začátku až do konce a sdílet pořízené
-     záběry
-   - návrh sklidil příliš mnoho nesouhlasu
-       - problematické je například zveřejňování fotek osob,
-         prokazování neuklízení, prokazování vlastnictví výkalu, ale
-         i samotné využití čertova Facebooku pro bohulibé účely spolku
-   - návrh se posunul k akci na našich spolkových stránkách, inzerované
-     všude na Facebooku
-   - návrh se posunul od fotografie k videu
-   - návrh se posunul od oficiální spolkové akce k samostatné aktivitě
-     členů Rupka a Vlčáka, bez spojitosti se spolkem
-   - návrh se dále posunul k vydávání periodika Hovnoviny obsahujícího
-     mj. rubriku Vyfoť hovňáka (existence dalších rubrik zatím nebyla
-     potvrzena)
-   - s každým dalším posunem získával návrh mezi členy větší a větší
-     podporu
 
-14. **Soutěž o nejsmradlavější místa**
-   - v závěru diskuse o předchozím bodu zazněla myšlenka podnítit
-     fotografy k uměleckému ztvárnění smradu
-   - padl také návrh uspořádat soutěž, z níž vyjde vítězně
-     nejsmradlavější místo na Praze 7
-   - soutěžící by zasílali fotografii, adresu místa a své jméno
+12. **Vyfoť hovňáka**  
+    - Rupek se diví: "To jsou pořád ceremonie a hlasování -- a skutek
+      utek!"
+    - Pánča ho konejší: "To je běžný dojem všech nováčků..."
+    - kmenový člen Rupek předkládá návrh na facebookovou stránku Vyfoť
+      hovňáka, kam by každý spoluobčan mohl postovat fotku psa
+      znečišťujícího chodník a jeho majitele, který evidentně ignoruje
+      povinnost nápravy; stimulovat vhodně veřejnost, aby měla zájem
+      dokumentovat psí výkaly od začátku až do konce a sdílet pořízené
+      záběry
+    - návrh sklidil příliš mnoho nesouhlasu
+        - problematické je například zveřejňování fotek osob,
+          prokazování neuklízení, prokazování vlastnictví výkalu, ale
+          i samotné využití čertova Facebooku pro bohulibé účely spolku
+    - návrh se posunul k akci na našich spolkových stránkách, inzerované
+      všude na Facebooku
+    - návrh se posunul od fotografie k videu
+    - návrh se posunul od oficiální spolkové akce k samostatné aktivitě
+      členů Rupka a Vlčáka, bez spojitosti se spolkem
+    - návrh se dále posunul k vydávání periodika Hovnoviny obsahujícího
+      mj. rubriku Vyfoť hovňáka (existence dalších rubrik zatím nebyla
+      potvrzena)
+    - s každým dalším posunem získával návrh mezi členy větší a větší
+      podporu
 
-14. **Facebook**
-   - náš vztah k Facebooku: předseda Žáno nechce mít spolkové
-     facebookovké stránky, ale propagaci na Facebooku se nebrání
+14. **Soutěž o nejsmradlavější místa**  
+    - v závěru diskuse o předchozím bodu zazněla myšlenka podnítit
+      fotografy k uměleckému ztvárnění smradu
+    - padl také návrh uspořádat soutěž, z níž vyjde vítězně
+      nejsmradlavější místo na Praze 7
+    - soutěžící by zasílali fotografii, adresu místa a své jméno
 
-15. **Zpráva za uplynulé volební období**
-   - předseda přednáší zprávu o stavu
-       - spolek se postupně rozvíjí
-       - mezi úspěchy uplynulého roku lze jistě započítat zřízení
-         transparentního účtu, vybrání příspěvků od většiny členů,
-         mnohé schůze, uspořádání Otvírání studánek, na něž budeme
-         všichni ještě dlouho vzpomínat, návštěvu výstavy
-         Holešovice-Bubny následovanou osmihodinovou schůzí, která
-         položila masivní základy spolku
-       - v rámci spolku máme založenou pracovní skupinu WEB a pracovní
-         skupinu pro p.č.
-       - předseda uznává, že byly i rezervy (například web či poplatky)
-       - dlužno říci, že po volbách na Praze 7 došlo ke zlepšení stavu
-         ulic, čímž se potenciál možného otisku spolku do tváře čtvrti
-         zmenšil --- Houba však namítá, že nová radnice i zlepšení
-         stavu ulic je spíše první vlaštovkou činnosti našeho spolku
-         --- Žáno souhlasí a připomíná, že založení našeho spolku spadá
-         ještě do období občanské nečinnosti
-       - závěrem: "Udělali jsme nemálo; mohli jsme i víc."
+14. **Facebook**  
+    - náš vztah k Facebooku: předseda Žáno nechce mít spolkové
+      facebookovké stránky, ale propagaci na Facebooku se nebrání
 
-16. **Volby**
-   - předseda
-       - Žáno by byl rád, aby se vyměnil předseda spolku a nabízí svou
-         funkci
-       - rotariánská otázka znovu zvednuta -- a Houba kandiduje na
-         předsedu
-       - Žáno chválí jeho aktivitu, zejména ve věci p.č.
-       - *Tajné hlasování o předsedovi:* zvolen Žáno
-         přidělené hlasy: Žáno 5, Houba 2, Eda 1, neplatný 1
-   - pokladník
-       - *Aklamací zvolena pokladníkem:* Zuzi
-   - ceremoniář
-       - *Aklamací zvolen ceremoniářem:* Jája
-   - správní rada
-       - *Tajné hlasování o správní radě:* zvoleni Eda a Pánča
-         přídělené hlasy: Eda 6, Pánča 4, Houba 2, Vlčák 2, Jája 1,
-         Rupek 1, Zuzi 1, Mokl 1
-   - smírční a revizní komise
-       - V prvním kole hlasování o členech a předsedovi SRK došlo ke
-         shodě hlasů, která byla vyřešena preferencí kandidátů, kteří
-         získali více hlasů na předsedu. Nahlédnutím do Stanov se však
-         zjistilo, že o předsedovi shromáždění členů nerozhoduje a bylo
-         potřeba uspořádat druhé kolo rozhodující mezi Houbou, Moklem
-         a Vlčákem
-       - *Tajné hlasování o členech SRK:* zvoleni Rupek, Mokl, Vlčák
-         přidělené hlasy v prvním kole: Rupek 7, Houba 5, Mokl 5, Vlčák
-         5, Jája 4
-         přidělené hlasy v druhém kole: Mokl 8, Vlčák 5, Houba 4
-       - *Interní volba předsedy SRK:* členy SRK zvolen předsedou Vlčák
-   - asistent ceremoniáře
-       - *Ceremoniář si za asistenta volí:* Houbu
-       - Houbovi bude ctí
-   - *VÝSLEDKY VOLEB:*
-     *předseda:* Žáno; *správní rada:* Žáno, Eda, Pánča
-     *ceremoniář a asistent:* Jája a Houba
-     *smírční a revizní komise:* Vlčák (*předseda* SRK), Rupek, Mokl
-     *pokladník:* Zuzi
-   - princip rotování funkcí byl tedy uplatněn pouze u Jáji
-     a navrhovatele Houby, kteří přišli o druhou funkci -- člen SRK
-   - Všichni spolkaři si uvědomují, že nejaktivnější spolkař Houba,
-     kandidující mj. i na předsedu, nebyl (vždy těsně) zvolen v žádné
-     volbě a chtějí to řešit. Houba je však hrdě a noblesně utiší
-     slovy: "Největší odměnou pro mě bude, když me necháte v klidu
-     pracovat pro spolek!"
+15. **Zpráva za uplynulé volební období**  
+    - předseda přednáší zprávu o stavu
+        - spolek se postupně rozvíjí
+        - mezi úspěchy uplynulého roku lze jistě započítat zřízení
+          transparentního účtu, vybrání příspěvků od většiny členů,
+          mnohé schůze, uspořádání Otvírání studánek, na něž budeme
+          všichni ještě dlouho vzpomínat, návštěvu výstavy
+          Holešovice-Bubny následovanou osmihodinovou schůzí, která
+          položila masivní základy spolku
+        - v rámci spolku máme založenou pracovní skupinu WEB a pracovní
+          skupinu pro p.č.
+        - předseda uznává, že byly i rezervy (například web či poplatky)
+        - dlužno říci, že po volbách na Praze 7 došlo ke zlepšení stavu
+          ulic, čímž se potenciál možného otisku spolku do tváře čtvrti
+          zmenšil --- Houba však namítá, že nová radnice i zlepšení
+          stavu ulic je spíše první vlaštovkou činnosti našeho spolku
+          --- Žáno souhlasí a připomíná, že založení našeho spolku spadá
+          ještě do období občanské nečinnosti
+        - závěrem: "Udělali jsme nemálo; mohli jsme i víc."
 
-17. **Schůze správní rady**
-   - rada se zavázala setkávat každé první úterý v měsíci Na Nové
-     Šachtě
+16. **Volby**  
+    - předseda
+        - Žáno by byl rád, aby se vyměnil předseda spolku a nabízí svou
+          funkci
+        - rotariánská otázka znovu zvednuta -- a Houba kandiduje na
+          předsedu
+        - Žáno chválí jeho aktivitu, zejména ve věci p.č.
+        - *Tajné hlasování o předsedovi:* zvolen Žáno  
+          přidělené hlasy: Žáno 5, Houba 2, Eda 1, neplatný 1
+    - pokladník
+        - *Aklamací zvolena pokladníkem:* Zuzi
+    - ceremoniář
+        - *Aklamací zvolen ceremoniářem:* Jája
+    - správní rada
+        - *Tajné hlasování o správní radě:* zvoleni Eda a Pánča  
+          přídělené hlasy: Eda 6, Pánča 4, Houba 2, Vlčák 2, Jája 1,
+          Rupek 1, Zuzi 1, Mokl 1
+    - smírční a revizní komise
+        - V prvním kole hlasování o členech a předsedovi SRK došlo ke
+          shodě hlasů, která byla vyřešena preferencí kandidátů, kteří
+          získali více hlasů na předsedu. Nahlédnutím do Stanov se však
+          zjistilo, že o předsedovi shromáždění členů nerozhoduje a bylo
+          potřeba uspořádat druhé kolo rozhodující mezi Houbou, Moklem
+          a Vlčákem
+        - *Tajné hlasování o členech SRK:* zvoleni Rupek, Mokl, Vlčák  
+          přidělené hlasy v prvním kole: Rupek 7, Houba 5, Mokl 5, Vlčák
+          5, Jája 4  
+          přidělené hlasy v druhém kole: Mokl 8, Vlčák 5, Houba 4
+        - *Interní volba předsedy SRK:* členy SRK zvolen předsedou Vlčák
+    - asistent ceremoniáře
+        - *Ceremoniář si za asistenta volí:* Houbu
+        - Houbovi bude ctí
+    - *VÝSLEDKY VOLEB:*  
+      *předseda:* Žáno; *správní rada:* Žáno, Eda, Pánča  
+      *ceremoniář a asistent:* Jája a Houba  
+      *smírční a revizní komise:* Vlčák (*předseda* SRK), Rupek, Mokl  
+      *pokladník:* Zuzi
+    - princip rotování funkcí byl tedy uplatněn pouze u Jáji
+      a navrhovatele Houby, kteří přišli o druhou funkci -- člen SRK
+    - Všichni spolkaři si uvědomují, že nejaktivnější spolkař Houba,
+      kandidující mj. i na předsedu, nebyl (vždy těsně) zvolen v žádné
+      volbě a chtějí to řešit. Houba je však hrdě a noblesně utiší
+      slovy: "Největší odměnou pro mě bude, když me necháte v klidu
+      pracovat pro spolek!"
+
+17. **Schůze správní rady**  
+    - rada se zavázala setkávat každé první úterý v měsíci Na Nové
+      Šachtě
 
 
 
 Zakončení: 0:20
 
-Zapsal Eda (27. 10.)
+Zapsal Eda (27. 10.)  
+
+
+ vim: textwidth=72 : autoindent : expandtab :
+ enc=utf8
