--- a/src/zapisy/spravni_rada/2016-01-05.md
+++ b/src/zapisy/spravni_rada/2016-01-05.md
@@ -1,59 +1,57 @@
----
-title: "Schůze správní rady (VI)"
-date: 2016-01-05
-layout: zapis.html
----
+Schůze správní rady (6), 5. 1. 2016
+===================================
+Přítomni: Žáno, Pánča, Eda  
+Host: Roman, později též MD  
+Zapisovatel: Eda  
 
-Přítomni: Žáno, Pánča, Eda
-Host: Roman
-Zapisovatel: Eda
+Zahájení: 22:24, Na Nové Šachtě
 
-Zahájení: 22:24, Na Šachtě
+1. **Formální úkony**  
+    Schvalujeme, že se Roman na dnešním zasedání správní rady stane
+    "hostem s právem vstupovat vtipnými glosami do diskuse". Schváleno
+    aklamací.
 
-1. **Formální úkony**
-   Schvalujeme, že se Roman na dnešním zasedání správní rady stane
-   "hostem s právem vstupovat vtipnými glosami do diskuse". Schváleno
-   aklamací.
-
-2. **Situace kolem ratlíků**
-   Host Roman varuje před ratlíky -- je to údajně strašný pes. Když
-   člověku spadne do oka, hrozně to bolí.
+2. **Situace kolem ratlíků**  
+    Host Roman varuje před ratlíky -- je to údajně strašný pes. Když
+    člověku spadne do oka, hrozně to bolí.
 
 Ve 22:32 přichází host MD.
 
-3. **Nečekaný formální úkon**
-   Host MD s právem naslouchat. Schváleno aklamací.
+3. **Nečekaný formální úkon**  
+    Host MD s právem naslouchat. Schváleno aklamací.
 
-4. **Kampaň proti toxokaroze**
-   - aneb Úkoly z minula: stále platí, že kampaň bude rozjeta.
-   - Eda navrhuje virální video, ve kterém vystupuje hlavní hrdina
-     nejprve v dětském věku, kdy ho pes připraví o zrak, po zbytek
-     života pak šlape na chodnících do psích výkalů. Napíšeme prozatím
-     scénář. [úkol: správní rada H]
-   - MD navrhuje využít klip Noname s názvem
-     ["Povedz mi"](https://www.youtube.com/watch?v=u--eErh_d0c) natáčený na
-     Letné.
-   - do videa použijeme obří chlupaté nohy/papuče, hit posledních Vánoc
+4. **Kampaň proti toxokaroze**  
+    - aneb Úkoly z minula: stále platí, že kampaň bude rozjeta.
+    - Eda navrhuje virální video, ve kterém vystupuje hlavní hrdina
+      nejprve v dětském věku, kdy ho pes připraví o zrak, po zbytek
+      života pak šlape na chodnících do psích výkalů. Napíšeme prozatím
+      scénář. [úkol: správní rada H]
+    - MD navrhuje využít klip Noname s názvem
+      ["Povedz mi"](https://www.youtube.com/watch?v=u--eErh_d0c) natáčený na
+      Letné.
+    - do videa použijeme obří chlupaté nohy/papuče, hit posledních Vánoc
 
-5. **Konec hospodské kratochvíle**
-   - byly vypsány dotace na kulturu (max. 100.000 Kč na projekt, celkem
-     se rozděluje 2 MKč)
-   - to by však znamenalo začít vést účetnictví a další závazky
-     plynoucí přímo ze zadání projektu
-   - museli bychom začít něco dělat a ne se jen scházet v hospodách
-   - Eda namítá, že bychom projekt (například virální video) nemuseli
-     být schopni uskutečnit, vezmeme-li v potaz dosavadní činnost.
-     Z toho plyne velké riziko.
-   - Žáno navrhuje podat recisistickou žádost o dotaci: projekt na
-     zakoupení poháru pro vítěze Otvírání studánek
-   - s takovým postupem všichni souhlasíme, v pátek žádost sepíšeme na
-     Paliárce; Žáno zatím zjistí podmínky: kdyby byly složité,
-     shodujeme se aklamací, že se na to vysereme
+5. **Konec hospodské kratochvíle**  
+    - byly vypsány dotace na kulturu (max. 100.000 Kč na projekt, celkem
+      se rozděluje 2 MKč)
+    - to by však znamenalo začít vést účetnictví a další závazky
+      plynoucí přímo ze zadání projektu
+    - museli bychom začít něco dělat a ne se jen scházet v hospodách
+    - Eda namítá, že bychom projekt (například virální video) nemuseli
+      být schopni uskutečnit, vezmeme-li v potaz dosavadní činnost.
+      Z toho plyne velké riziko.
+    - Žáno navrhuje podat recisistickou žádost o dotaci: projekt na
+      zakoupení poháru pro vítěze Otvírání studánek
+    - s takovým postupem všichni souhlasíme, v pátek žádost sepíšeme na
+      Paliárce; Žáno zatím zjistí podmínky: kdyby byly složité,
+      shodujeme se aklamací, že se na to vysereme
 
-6. **Svolání členské schůze**
-   Členská schůze bude svolána na pátek 5. února na Paliárku od 21:00.
+6. **Svolání členské schůze**  
+    Členská schůze bude svolána na pátek 5. února na Paliárku od 21:00.
 
 Zakončení schůze ve 23:04
 
-Zapsal Eda (3.2.)
+Zapsal Eda (3.2.)  
 
+ vim: textwidth=72 : autoindent : expandtab : ft=markdown :
+ enc=utf8
