--- a/src/zapisy/spravni_rada/2016-02-03.md
+++ b/src/zapisy/spravni_rada/2016-02-03.md
@@ -1,102 +1,101 @@
----
-title: "Schůze správní rady (7)"
-date: 2016-02-03
-layout: zapis.html
----
-
-Přítomni: Žáno, Pánča, Eda
-Host: později Jája
-Zapisovatel: Eda
+Schůze správní rady (7), 3. 2. 2016
+===================================
+Přítomni: Žáno, Pánča, Eda  
+Host: později Jája  
+Zapisovatel: Eda  
 
 Zahájení: 21:19, Na Nové Šachtě
 
 Přerušení: 21:20 -- 21:34 (Edovi přinesli segedín)
 
-1. **Gratulace a poděkování**
-   Správní rada gratuluje Edovi k rychlému snědení nemalé porce
-   segedínu.
-   Předseda děkuje členům správní rady za práci pro spolek.
+1. **Gratulace a poděkování**  
+    Správní rada gratuluje Edovi k rychlému snědení nemalé porce
+    segedínu.  
+    Předseda děkuje členům správní rady za práci pro spolek.
 
-2. **Hosting webu**
-   Je nutno osvojit si práci se spolkovým bankovním účtem a poslat
-   Houbovi peníze za hosting. [úkol: Žáno]
+2. **Hosting webu**  
+    Je nutno osvojit si práci se spolkovým bankovním účtem a poslat
+    Houbovi peníze za hosting. [úkol: Žáno]
 
-3. **Příprava programu členské schůze**
-   - kolotoč -- zvážit příspěvek spolku na opravu Letenského kolotoče,
-     cenu rozhodnout s ohledem na ostatní přispěvatele na [transparentní
-     účet](http://www.kb.cz/cs/on-line-sluzby/on-line-informace/transparentni-ucty/105894151-narodni-technicke-muzeum/detail-uctu-1079304750207.shtml),
-     aby se jméno našeho spolku zaskvělo beze studu
-       - za 13 měsíců sbírky se vybralo 350 tisíc, v roce 2016 přibylo
-         17 příspěvků (výhradně od jednotlivců) od 150 do 5000 Kč
-         (průměr 690 Kč, medián 300 Kč)
-   - připomenout placení poplatků na rok 2016: 500 Kč každý člen
-   - připomenout přípravu insignií spolku
-   - shrnout dosavadní spolkové nápady [úkol: Eda], vybrat realizátory
-     projektů
-   - Otvírání studánek 2016 zřejmě s hojnější účastí, shrnout poznámky
-     z minulého ročníku, zařídit propagaci
-   - schválit reprefond na schůze správní rady
-   - informace o výsledcích soutěže o žertovné hovno, resp. psa
-     v choulostivé situaci (uzavření 31.1.) -- kdo splnil úkol
-     a zúčastnil se?
-   - informace o prvním čísle Hovnovin -- kdy vyjde?
-   - informace o spolkové knihovně -- z architektonického hlediska by
-     mohla vykrádat Kaplického nápad a mohla by být jakožto pouze
-     spolková mnohem skromnější, dala by se například vytisknout na 3D
-     tiskárně a nosit v kapse do hospody (za tímto návrhem ale
-     pravděpodobně stojí zejména závěrečná runda panáků v barvě ubrusu
-     od pivovaru Staropramen)
-   - finanční pravidla spolku
-   - žádost o zprávu smírčí a revizní komise za rok 2015
-   - projít dosavadní úkoly, nesplněné znovu připomenout na schůzi
-     [úkol: Eda]
+3. **Příprava programu členské schůze**  
+    - kolotoč -- zvážit příspěvek spolku na opravu Letenského kolotoče,
+      cenu rozhodnout s ohledem na ostatní přispěvatele na [transparentní
+      účet](http://www.kb.cz/cs/on-line-sluzby/on-line-informace/transparentni-ucty/105894151-narodni-technicke-muzeum/detail-uctu-1079304750207.shtml),
+      aby se jméno našeho spolku zaskvělo beze studu
+        - za 13 měsíců sbírky se vybralo 350 tisíc, v roce 2016 přibylo
+          17 příspěvků (výhradně od jednotlivců) od 150 do 5000 Kč
+          (průměr 690 Kč, medián 300 Kč)
+    - připomenout placení poplatků na rok 2016: 500 Kč každý člen
+    - připomenout přípravu insignií spolku
+    - shrnout dosavadní spolkové nápady [úkol: Eda H], vybrat realizátory
+      projektů
+    - Otvírání studánek 2016 zřejmě s hojnější účastí, shrnout poznámky
+      z minulého ročníku, zařídit propagaci
+    - schválit reprefond na schůze správní rady
+    - informace o výsledcích soutěže o žertovné hovno, resp. psa
+      v choulostivé situaci (uzavření 31.1.) -- kdo splnil úkol
+      a zúčastnil se?
+    - informace o prvním čísle Hovnovin -- kdy vyjde?
+    - informace o spolkové knihovně -- z architektonického hlediska by
+      mohla vykrádat Kaplického nápad a mohla by být jakožto pouze
+      spolková mnohem skromnější, dala by se například vytisknout na 3D
+      tiskárně a nosit v kapse do hospody (za tímto návrhem ale
+      pravděpodobně stojí zejména závěrečná runda panáků v barvě ubrusu
+      od pivovaru Staropramen)
+    - finanční pravidla spolku
+    - žádost o zprávu smírčí a revizní komise za rok 2015
+    - projít dosavadní úkoly, nesplněné znovu připomenout na schůzi
+      [úkol: Eda H]
 
 22:17 přichází host Jája a je aklamačně ustanoven hostem s nejširšími
 právy -- totiž s právem slova
 
-4. **Scénář virálního videa o toxokaroze**
-   - využít Rupkův dron
-   - délka 2-3 minuty, aby dostál svému virálnímu charakteru
-   - děj retrospektivní
-   - točit na telefon, je to moderní a roztřesené (zapnout aplikaci
-     "rušení stabilizace obrazu")
-   - dospělý slepec jde po chodníku, šlape do lejn
-   - sousedka se psem se ho ptá, jak vlastně přišel o zrak
-   - ve flashbacku vzpomíná, kterak to tehdy všechno začalo
-   - celý flashback v oparu, jako staré video -- zřejmě použít nějakou
-     aplikaci "VHS"
-   - dítě sedí na dětském hřišti, na pískovišti se dloube v hovně
-   - nepoužívat skutečná hovna, raději ta ve spreji
-   - prostřih do nemocničního prostředí
-   - na závěr se děj vrací do přítomnosti, dvojice v hovoru vchází do
-     domu
-   - slepec požádá sousedku, zda by mu nezkontrolovala schránku, má ji
-     úplně nahoře
-   - žena, pohnutá po vyslechnutí příběhu, stiskne zuby, zvedne ruce ke
-     schránce, čímž oběsí pejska na obojku
-   - záběr na psa ve videu nebude: jen zřetelné vodítko vedoucí od
-     rukou dolů pod záběr, škubání vodítka, možná kňučení, pak klid.
-     Pohled sousedky od schránky dolů.
-   - potom se obraz zastaví (nebo střih na čisté pozadí) a začne se
-     psát nějaký statistický údaj o toxokaroze; písmena přibývají
-     postupně, font i zvuk odpovídá psacímu stroji, což zdůrazní
-     fakticitu údaje i dramatičnost situace
-   - následuje tzv. gilotinová stmívačka s kapičkou krve; případně
-     razítko spolku přes celý záběr, od nějž odstříkne maličko krve
-   - nápis "Při natáčení tohoto klipu zemřel jeden pes. Všem
-     protagonistům se daří skvěle." ...tam asi dávat nebudeme
-   - zjistit, zda nám Bubák napíše hudbu; zjistit, zda nám MD zapůjčí
-     psa Vincka
+4. **Scénář virálního videa o toxokaroze**  
+    - využít Rupkův dron
+    - délka 2-3 minuty, aby dostál svému virálnímu charakteru
+    - děj retrospektivní
+    - točit na telefon, je to moderní a roztřesené (zapnout aplikaci
+      "rušení stabilizace obrazu")
+    - dospělý slepec jde po chodníku, šlape do lejn
+    - sousedka se psem se ho ptá, jak vlastně přišel o zrak
+    - ve flashbacku vzpomíná, kterak to tehdy všechno začalo
+    - celý flashback v oparu, jako staré video -- zřejmě použít nějakou
+      aplikaci "VHS"
+    - dítě sedí na dětském hřišti, na pískovišti se dloube v hovně
+    - nepoužívat skutečná hovna, raději ta ve spreji
+    - prostřih do nemocničního prostředí
+    - na závěr se děj vrací do přítomnosti, dvojice v hovoru vchází do
+      domu
+    - slepec požádá sousedku, zda by mu nezkontrolovala schránku, má ji
+      úplně nahoře
+    - žena, pohnutá po vyslechnutí příběhu, stiskne zuby, zvedne ruce ke
+      schránce, čímž oběsí pejska na obojku
+    - záběr na psa ve videu nebude: jen zřetelné vodítko vedoucí od
+      rukou dolů pod záběr, škubání vodítka, možná kňučení, pak klid.
+      Pohled sousedky od schránky dolů.
+    - potom se obraz zastaví (nebo střih na čisté pozadí) a začne se
+      psát nějaký statistický údaj o toxokaroze; písmena přibývají
+      postupně, font i zvuk odpovídá psacímu stroji, což zdůrazní
+      fakticitu údaje i dramatičnost situace
+    - následuje tzv. gilotinová stmívačka s kapičkou krve; případně
+      razítko spolku přes celý záběr, od nějž odstříkne maličko krve
+    - nápis "Při natáčení tohoto klipu zemřel jeden pes. Všem
+      protagonistům se daří skvěle." ...tam asi dávat nebudeme
+    - zjistit, zda nám Bubák napíše hudbu; zjistit, zda nám MD zapůjčí
+      psa Vincka
 
-5. **Znak spolku**
-   - jeden z Jájových návrhů znaku: střevíc v hovně a otazník (označuje
-     jej za zástupce tzv. výhružného typu znaku), váhá, zda raději
-     nepoužít nějaký výrazný typicky místní historický motiv
-   - z další diskuse vzešel návrh: v pravé polovici pražský znak (jen
-     na špičce meče v bráně je napíchnuté nepatrné hnědé psí hovínko),
-     v druhé polovici tři zásadní šišky: chmelová šiška, šiška chleba
-     a hovno
+5. **Znak spolku**  
+    - jeden z Jájových návrhů znaku: střevíc v hovně a otazník (označuje
+      jej za zástupce tzv. výhružného typu znaku), váhá, zda raději
+      nepoužít nějaký výrazný typicky místní historický motiv
+    - z další diskuse vzešel návrh: v pravé polovici pražský znak (jen
+      na špičce meče v bráně je napíchnuté nepatrné hnědé psí hovínko),
+      v druhé polovici tři zásadní šišky: chmelová šiška, šiška chleba
+      a hovno
 
 Zakončení: 23:08
 
-Zapsal Eda (4.2.)
+Zapsal Eda (4.2.)  
+
+ vim: textwidth=72 : autoindent : expandtab : ft=markdown :
+ enc=utf8
