--- a/src/zapisy/schuze/2015-04-12.md
+++ b/src/zapisy/schuze/2015-04-12.md
@@ -1,187 +1,209 @@
----
-title: Čtvrtá schůze
-date: 2015-04-12
-layout: zapis.html
----
-Přítomni: Žáno, Zuzi, Houba, Pánča, Eda, Jája, (Mokl skrz plnou moc)
-Host: Julie
+Čtvrtá schůze, 12. 4. 2015
+==========================
+Přítomni: Žáno, Zuzi, Houba, Pánča, Eda, Jája, (Mokl skrz plnou moc)  
+Host: Julie  
 Zapisovatel: Eda
 
 Zahájení: 19:13 u Šlechtovy restaurace, druhdy výstavního klenotu naší
 čtvrti
 
-1. **Formální úkony**
-   - Schůzi zahájil Žáno
-   - Mokl je zastoupen plnou mocí Houbou
-   - schůze nebyla svolána s dostatečným předstihem, všichni přítomní
-     jsou s tím ovšem srozuměni, čímž se schůze stává usnášeníschopnou
-   - host Julie je schválena jako host dnešního zasedání spolku
+1. **Formální úkony**  
+    - Schůzi zahájil Žáno
+    - Mokl je zastoupen plnou mocí Houbou
+    - schůze nebyla svolána s dostatečným předstihem, všichni přítomní
+      jsou s tím ovšem srozuměni, čímž se schůze stává usnášeníschopnou
+    - host Julie je schválena jako host dnešního zasedání spolku
 
-2. **Finance**
-   - založíme účet, zřejmě transparentní u Fio [úkol: Žáno]
-   - členské poplatky za loňský rok (500 Kč), které jsme nevybrali,
-     vybereme
-   - USNESENÍ č. 1: Pro rok 2015 stanovujeme výši poplatků 500 Kč
-     a jejich výběr se spojí s výběrem za loňský rok, tedy 100 Kč na
-     člena.
-     Přijato. (4 pro, 2 proti, 1 se zdržel)
+2. **Finance**  
+    - založíme účet, zřejmě transparentní u Fio [úkol: Žáno H]
+    - členské poplatky za loňský rok (500 Kč), které jsme nevybrali,
+      vybereme
+    - *USNESENÍ č. 1:* Pro rok 2015 stanovujeme výši poplatků 500 Kč
+      a jejich výběr se spojí s výběrem za loňský rok, tedy 1000 Kč na
+      člena.  
+      *Přijato.* (4 pro, 2 proti, 1 se zdržel)
 
-3. **Parní čistič**
-   - Houba přednáší příspěvek o čistotě ulic, rozdává své reklamní
-     materiály
-   - jedná se o parní čistič John Deere, podle slov předkladatele
-     ideální pro náš záměr
-   - předkladatel tímto dále navrhuje, abychom se angažovali osobně
-   - předkladatel připouští, že stroj stojí peníze, konkrétně dolary,
-     konkrétně 4500
-   - zahajuje se diskuse
-   - Houba: Přijde-li to spolku příliš, měli bychom najít někoho, kdo
-     se problematice bude nadále věnovat -- spíš tým, neboť je to
-     komplexní situace, doporučuje tříčlennou komisi.
-   - Žáno přináší zásadní protinávrh: jednočlenná komise
-   - USNESENÍ č. 2: Moč je horší než hovna.
-     Přijato. (7 pro)
-       - motto vyplynulo z diskuse
-       - je potřeba zajistit jeho latinský překlad [úkol: ceremoniář
-         Jája]
-   - dům, kde bydlí spolkaři Zuzi a Žáno, je rozežraný od moči;
-     vyvstává ovšem otázka, co s domem způsobí pára
-   - Jája: Musíme někoho ke koupi tohoto stroje přesvědčit -- nebo to
-     jako spolek koupit sami.
-   - Žáno nesouhlasí.
-   - Houba připojuje svůj dodatek k rešerši, kterou provedl: jako
-     alternativa k vítězi, parnímu čisticímu stroji John Deere, se jeví
-     hojně doporučovaný ocet.
-   - Žáno mění svůj protinávrh na jiný protinávrh: dvoučlenná komise,
-     tentokrát i s konkrétním obsazením: Houba, Zuzi.
-   - Houba trvá na třech členech, navržené dva členy doplňuje o Jáju.
-   - Jája se ke své nominaci vyjadřuje oklikou: V Národním technickém
-     muzeu bud výstava parních strojů.
-   - Zuzi se ke své nominaci vyjadřuje napřímo: Není si touto svou rolí
-     jista.
-   - USNESENÍ č. 3: K další analýze problematiky holešovicko-bubenského
-     parního čističe ulic ustavujeme dvoučlennou komisi ve složení
-     Houba, Jája.
-     Přijato. (7 pro)
+3. **Parní čistič**  
+    - Houba přednáší příspěvek o čistotě ulic, rozdává materiály
+      ([příloha č.
+      1](http://www.ms.mff.cuni.cz/~bejce9am/buben/appendices/zapis_04_cistic.jpg))
+    - jedná se o parní čistič John Deere, podle slov předkladatele
+      ideální pro náš záměr
+    - předkladatel tímto dále navrhuje, abychom se angažovali osobně
+    - předkladatel připouští, že stroj stojí 4500 dolarů
+    - zahajuje se diskuse
+    - Houba: Přijde-li to spolku příliš, měli bychom najít někoho, kdo
+      se problematice bude nadále věnovat -- spíš tým, neboť je to
+      komplexní situace, doporučuje tříčlennou komisi.
+    - Žáno přináší zásadní protinávrh: jednočlenná komise
+    - *USNESENÍ č. 2:* Moč je horší než hovna.  
+      *Přijato.* (7 pro)
+        - motto vyplynulo z diskuse
+        - je potřeba zajistit jeho latinský překlad [úkol: ceremoniář
+          Jája]
+    - dům, kde bydlí spolkaři Zuzi a Žáno, je rozežraný od moči;
+      vyvstává ovšem otázka, co s domem způsobí pára
+    - Jája: Musíme někoho ke koupi tohoto stroje přesvědčit -- nebo to
+      jako spolek koupit sami.
+    - Žáno nesouhlasí.
+    - Houba připojuje svůj dodatek k rešerši, kterou provedl: jako
+      alternativa k vítězi, parnímu čisticímu stroji John Deere, se jeví
+      hojně doporučovaný ocet.
+    - Žáno mění svůj protinávrh na jiný protinávrh: dvoučlenná komise,
+      tentokrát i s konkrétním obsazením: Houba, Zuzi.
+    - Houba trvá na třech členech, navržené dva členy doplňuje o Jáju.
+    - Jája se ke své nominaci vyjadřuje oklikou: V Národním technickém
+      muzeu bude výstava parních strojů.
+    - Zuzi se ke své nominaci vyjadřuje napřímo: Není si touto svou rolí
+      jista.
+    - *USNESENÍ č. 3:* K další analýze problematiky holešovicko-bubenského
+      parního čističe ulic ustavujeme dvoučlennou komisi ve složení
+      Houba, Jája.  
+      *Přijato*. (7 pro)
 
-4. **Pravidla pobytu psů v Praze**
-   - Jája navrhuje vytvořit přehled, co platí, co hrozí, pečlivě
-     distribuovat uvnitř spolku
-   - je tedy potřeba dokončit rešerši, kterou už Zuzi započala [úkol:
-     Zuzi]
-   - některá fakta zazněla už v následné diskusi
-       - Pes na dětském hřišti je zakázán vyhláškou v celé Praze, pod
-         pokutou 500 Kč -- tu tedy může dostat majitel i v případě, že
-         na samotném vstupu na hřiště žádný zákaz není.
-       - Zuzi podotýká, že z diskusí tzv. "pejskařů" jasně vyplývá, že
-         oni se ani nesnaží nemočit, neboť mají pocit, že za svůj
-         (pochopitelně směšný) roční poplatek se to uklidí
+4. **Pravidla pobytu psů v Praze**  
+    - Jája navrhuje vytvořit přehled, co platí, co hrozí, pečlivě
+      distribuovat uvnitř spolku
+    - je tedy potřeba dokončit rešerši, kterou už Zuzi započala [úkol:
+      Zuzi]
+    - některá fakta zazněla už v následné diskusi
+        - Pes na dětském hřišti je zakázán vyhláškou v celé Praze, pod
+          pokutou 500 Kč -- tu tedy může dostat majitel i v případě, že
+          na samotném vstupu na hřiště žádný zákaz není.
+        - Zuzi podotýká, že z diskusí tzv. "pejskařů" jasně vyplývá, že
+          oni se ani nesnaží nemočit, neboť mají pocit, že za svůj
+          (pochopitelně směšný) roční poplatek se to uklidí
 
-5. **Happening Tusarova**
-   - Zuzi zná oplocený parčík v ulici Tusarova (zřejmě na místě bývalé
-     zahrádkářské kolonie Jaro), kam důchodci i přes jasný zákaz chodí
-     venčit psy
-   - Zuzi navrhuje branku v plůtku parčíku po shromáždění
-     nezanedbatelného množství důchodců zavřít a zavolat policii
-   - jde o test, jak policie zareaguje
+5. **Happening Tusarova**  
+    - Zuzi zná oplocený parčík v ulici Tusarova (zřejmě na místě bývalé
+      zahrádkářské kolonie Jaro), kam důchodci i přes jasný zákaz chodí
+      venčit psy
+    - Zuzi navrhuje branku v plůtku parčíku po shromáždění
+      nezanedbatelného množství důchodců zavřít a zavolat policii
+    - jde o test, jak policie zareaguje
 
-6. **Demotivační video**
-   - video diskutované na předchozích schůzích, které má demotivovat
-     lidi od špinění ulic a zejména okolí špiničů upozornit, že to
-     rozhodně není normální
-   - Zuzi má kontakt na tři možné filmaře: jeden studuje režii na FAMU,
-     dva se hlásí na střih na FAMU
-   - cena za video by spolek vyšla zhruba na 3000 Kč
+6. **Demotivační video**  
+    - video diskutované na předchozích schůzích, které má demotivovat
+      lidi od špinění ulic a zejména okolí špiničů upozornit, že to
+      rozhodně není normální
+    - Zuzi má kontakt na tři možné filmaře: jeden studuje režii na FAMU,
+      dva se hlásí na střih na FAMU
+    - cena za video by spolek vyšla zhruba na 3000 Kč
+
 
 
 Přerušení schůze: 20:00 až 21:13 (důvod: Nutný přesun ze Stromovky na
 Šachtu)
 
-USNESENÍ č. 4: Eda dobře chlastá.
-Nepřijato. (3 pro, 1 se zdržel -- leč schůze přestala být
+*USNESENÍ č. 4:* Eda dobře chlastá.  
+*Nepřijato*. (3 pro, 1 se zdržel -- leč schůze přestala být
 usnášeníschopná)
 
-7. **Doména pro web**
-   - návrh z minula, přednáší Eda: BUBEN
-   - Žáno kontruje slovem, které nikdy nikdo neslyšel: HOLEBUB
-   - Houba a Pánča navrhují, aby doména nejvyššího řádu bylo rozhodně
-     .cz
-   - protože teď nemáme možnost ověřovat dostupnost domén, musíme
-     sestavit pořadí a z něj pak vybrat první, která bude dostupná
-     v .cz
-   - Pánča šokuje záborem zámořské kolonie Troja a návrhem HOLETROL
-   - obecně se má za to, že vypuštění Bubnů z doménového jména, není
-     šťastné
-   - USNESENÍ č. 5: Houba je muž činu.
-     Přijato. (4 pro, 1 se zdržel, 2 chyběli)
-   - čtvrtý návrh syntetizující ty předešlé, HOBUTROL, je nadšeně všemi
-     přijat
-   - Ustanovena pracovní skupina Internet: Pánča, Houba
+7. **Doména pro web**  
+    - návrh z minula, přednáší Eda: BUBEN
+    - Žáno kontruje slovem, které nikdy nikdo neslyšel: HOLEBUB
+    - Houba a Pánča navrhují, aby doména nejvyššího řádu bylo rozhodně
+      .cz
+    - protože teď nemáme možnost ověřovat dostupnost domén, musíme
+      sestavit pořadí a z něj pak vybrat první, která bude dostupná
+      v .cz
+    - Pánča šokuje záborem zámořské kolonie Troja a návrhem HOLETROL
+    - obecně se má za to, že vypuštění Bubnů z doménového jména, není
+      šťastné
+    - *USNESENÍ č. 5:* Houba je muž činu.  
+      *Přijato*. (4 pro, 1 se zdržel, 2 chyběli jsouce na WC)
+    - čtvrtý návrh syntetizující ty předešlé, HOBUTROL, je nadšeně všemi
+      přijat
+    - Ustanovena pracovní skupina Internet: Pánča, Houba
 
-8. **Knihovna spolku**
-   - Jája podává návrh zřídit knihovnu, v ní shraňovat např. všechna
-     čísla Hobuletů, mohou tam být i technické týdeníky
-   - je nutné si položit a zodpovědět otázku, co má být jejím účelem
-   - Žáno navrhuje, aby to byl sběr informací o této čtvrti
-   - Jája oponuje, že to může být sběr informací i o ostatních čtvrtích
-   - Ustanovena pracovní skupina Knihovna: Jája, Žáno
+8. **Knihovna spolku**  
+    - Jája podává návrh zřídit knihovnu, v ní schraňovat např. všechna
+      čísla Hobuletů, mohou tam být i technické týdeníky
+    - je nutné si položit a zodpovědět otázku, co má být jejím účelem
+    - Žáno navrhuje, aby to byl sběr informací o této čtvrti
+    - Jája oponuje, že to může být sběr informací i o ostatních čtvrtích
+    - Ustanovena pracovní skupina Knihovna: Jája, Žáno
 
-9. **Otvírání studánek**
-   - po jedenácti hodinách náročného spolkového života a čtyřech hodinách
-     vyčerpávající schůze se dostáváme ke zlatému hřebu
-   - akce bude probíhat v sedmi hospodách, ty budou vylosovány
-     z patnácti
-   - hádanky budou v příštích ročnících, nebudou nutné k postupu
-   - za každou vyluštěnou hádanku pak budou bonusy
-   - návrh zvýšit penalizaci za zvracení, neboť v pravidlech je možnost
-     dopíjet za ostatní z týmu, je to tedy potřeba vyvážit malusem
-   - tématické inspirační zdroje: orienťák, šifrovačka, geocaching
-   - nápad: konec akce bude na vlakové zastávce Holešovice
+9. **Otvírání studánek**  
+    - po jedenácti hodinách náročného spolkového života a čtyřech hodinách
+      vyčerpávající schůze se dostáváme ke zlatému hřebu
+    - akce bude probíhat v sedmi hospodách, ty budou vylosovány
+      z patnácti
+    - hádanky budou v příštích ročnících, nebudou nutné k postupu
+    - za každou vyluštěnou hádanku pak budou bonusy
+    - návrh zvýšit penalizaci za zvracení, neboť v pravidlech je možnost
+      dopíjet za ostatní z týmu, je to tedy potřeba vyvážit malusem
+    - není nutno pít pivo, ale odpovídající množství alkoholu musí být
+      doplňováno jinou tekutinou na půl litru (tedy např. 2 dcl vína
+      spolu se 3 dcl vody)
+    - tématické inspirační zdroje: orienťák, šifrovačka, geocaching
+    - nápad: konec akce bude na vlakové zastávce Holešovice
 
 Přerušení schůze: 23:40 až 23:50 (důvod: Nutný přesun ze Šachty do
 TipSportu)
 
-10. **Seznam hospod pro Otvírání studánek**
-   - http://www.mapy.cz/s/hkKB
-   1. U Budyho (ač Libeň a žádná Praha 7)
-      Libeňský ostrov
-   2. U Přístavu
-      U průhonu 1194/64
-   3. U Vrtule
-      Tusarova 1537/19
-   4. V Háji
-      U průhonu 1070/25
-   5. Paliárka
-      Veletržní--Kamenická
-   6. Sparta
-      Šmeralova--Nad Královskou oborou
-   7. Restaurace U sv. Antoníčka
-      Pplk. Sochora 983/20
-   8. Lázně
-      Kostelní--Veverkova
-   9. Pražan
-      Výstaviště 415
-   10. Na Kovárně
-       Na Zátorách--Partyzánská
-   11. Prašivka
-       Jirečkova--Ovenecká
-   12. Na Nové Šachtě
-       Šimáčkova--U Smaltovny
-   13. Aksamiťák
-       U průhonu--U Měšťanských dvorů
-   14. Na Mělníku
-       Františka Křížka 745/28
-   15. Jana Zajíce--Havanská
-   16. Zahrádky
-       Letenské sady
-   17. Šlechtovka
-       Stromovka
-   18. U Vody (POVINNÁ!)
-       U vody 1403/1
-   19. Sochařská
-   - čtyři sektory, ve kterých by mělo být podobné zastoupení
-     vylosovaných hospod, jsou vyděleny severojižně nádražím
-     a východozápadně zhruba ulicemi Veletržní a Přístavní (ovšem
-     V Háji je na jihu a Aksamiťárna na severu)
+10. **Seznam hospod pro Otvírání studánek**   
+    - http://www.mapy.cz/s/hkKB
+    1. U Budyho (ač Libeň a žádná Praha 7)  
+       Libeňský ostrov
+    2. U Přístavu  
+       U průhonu 1194/64
+    3. U Vrtule  
+       Tusarova 1537/19
+    4. V Háji  
+       U průhonu 1070/25
+    5. Paliárka (POVINNÁ -- cíl)  
+       Veletržní--Kamenická
+    6. Sparta  
+       Šmeralova--Nad Královskou oborou
+    7. Restaurace U sv. Antoníčka  
+       Pplk. Sochora 983/20
+    8. Lázně  
+       Kostelní--Veverkova
+    9. Pražan  
+       Výstaviště 415
+    10. Na Kovárně  
+        Na Zátorách--Partyzánská
+    11. Prašivka  
+        Jirečkova--Ovenecká
+    12. Na Nové Šachtě  
+        Šimáčkova--U Smaltovny
+    13. Lokáda (dříve Aksamiťák)  
+        U průhonu--U Měšťanských dvorů
+    14. Na Mělníku  
+        Františka Křížka 745/28
+    15. zelený stánek na zast. Výstaviště  
+        U Výstaviště 23
+    16. Zahrádky  
+        Letenské sady
+    17. Šlechtovka  
+        Stromovka
+    18. U Vody (POVINNÁ!)  
+        U vody 1403/1
+    19. Restaurace Domovina  
+        Na Maninách 1149/32
+    20. Na Slamníku  
+        Wolkerova 566/12
+    21. ~~Sochařská~~ (zamítnuta)
+    22. ~~Liberál~~ (zamítnut)
+    23. ~~Ouky Douky~~ (zamítnuto)
+    24. ~~Na Maninách--U Uranie~~ (zamítnuta)
+    25. ~~"proti Danoušovi"~~ (zavřená)  
+    26. ~~U Kučerů~~ (zavřená)
+    - sraz v 18:45 v parčíku pod kostelem sv. Klimenta, sedm hospod (z
+      toho U Vody je povinná, neboť se tam natáčela Obecná škola,
+      a Paliárka je povinná jako cíl), zbylé se losují, start v sedm
+      večer
+    - zbylých pět hospod se vylosuje z následujících sektorů:
+        - 3 severodolní: Lokáda, U Budyho, V Háji
+        - 3 jihodolní: U Přístavu, U Vrtule, Domovina
+        - 3 stromovkový: Šlechtovka, Pražan, Slamník
+        - 4 traťový: Na Kovárně, Na Nové Šachtě, Sparta, zelený stánek
+        - 5 letenský: Zahrádky, Prašivka, Na Mělníku, Lázně, U Antoníčka
 
 Zakončení: 01:02
+
+Zapsal Eda (17.4.)  
+
+ vim: textwidth=72 : autoindent : expandtab :
+ enc=utf8
