--- a/src/zapisy/schuze/2014-01-24.md
+++ b/src/zapisy/schuze/2014-01-24.md
@@ -41,3 +41,6 @@ Schůze byla ukončena v 24:00
 Podpisy účastníků ustavující schůze:  
 
 //osm podpisů; zde anonymizováno//
+
+ vim: textwidth=72 : autoindent : expandtab :
+ 
